# regmirror

./: .gitignore  .markdownlint.json  CHANGELOG.md  README.md  pyproject.toml  regmirror.py
.github/workflows/: publish.yml
regmirror/: __init__.py  __main__.py
