[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regmirror"
dynamic = ["version"]
description = "Mirror container images via OCI tarballs"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "WatskeBart" }]
keywords = ["containers", "docker", "oci", "registry", "mirror", "skopeo"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/WatskeBart/regmirror"
Changelog = "https://github.com/WatskeBart/regmirror/blob/main/CHANGELOG.md"

[project.scripts]
regmirror = "regmirror.__main__:main"

[tool.hatch.version]
path = "regmirror/__main__.py"
